--- a/index.html
+++ b/index.html
@@ -32,6 +32,18 @@
 
       <div id="calendar"></div>
     </div>
+
+    <div id="newEventModal">
+      <h2>New Event</h2>
+
+      <input id="eventTitleInput" placeholder="Event Title"/>
+      <button id="saveButton" >Save</button>
+      <button id="cancelButton" >Cancel</button>
+
+    </div>
+
+    <div id="modalBackDrop"></div>
+
     <script src="./script.js"></script>
   </body>
 </html>
